# newmat11

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.rst  cholesky.cpp  controlw.h  evalue.cpp  hholder.cpp  newfft.cpp  newmat.h  newmat6.cpp
cmake/: newmat11-config.cmake.in  newmat11_add_example.cmake  newmat11_collect_build_options.cmake
newmat11/: CMakeLists.txt  cholesky.cpp  controlw.h  evalue.cpp  hholder.cpp  newfft.cpp  newmat.h  newmat5.cpp  newmat6.cpp
test/: CMakeLists.txt
test/cmake_usage_test/: CMakeLists.txt  inverse.cc
